@@ -3,8 +3,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
-- test mmn_eq for all Apache/.xs modules (e.g. Embperl, Apache::Request)
-
 - Apache::Server->keep_alive_timeout/timeout
 
 - loose @ISA 'DynaLoader' to avoid AutoLoader::AUTOLOAD
